--- a/index.html
+++ b/index.html
@@ -119,11 +119,19 @@ img {
 }
 
 .read-more {
-  padding: 10px 20px;
+  padding: 8px 32px;
   background-color: hsl(5, 85%, 63%);
   color: #fff;
   text-decoration: none;
   display: inline-block;
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 2px;
+  color: var(--off-white);
+  font-weight: 600;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 .feature {
   /* background-color: #f0f0f0; */
@@ -134,29 +142,29 @@ img {
   width: 100%;
 }
 
-.feature h2 {
-  font-size: 60px;
-  font-weight: bold;
-  margin-right: 40px;
-}
-
 .feature-header {
+    /* padding: 0px; */
     color: black;
-    font-size: 40px;
+    font-size: 72px;
     font-weight: 900;
+    letter-spacing: 1px;
+    line-height: 72px;
 }
 
 .feature-body p {
-  margin-bottom: 40px;
+  /* margin-bottom: 20px; */
   width: 100%;
   color: var(--grayish-blue);
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  line-height: 24px;
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr; /* One column */
-  grid-gap: 40px; /* Adjust the gap as needed */
+  grid-gap: 30px; /* Adjust the gap as needed */
 }
 
 .div-a, .div-b, .div-c, .div-d, .div-e, .div-f, .div-g {
@@ -188,14 +196,38 @@ img {
         width: 100%;
     }
 
+    #nav-links > *:not(:last-child) {
+        margin-right: 40px; /* Adds margin to all items except the last one */
+    }
+
     #nav-links.active {
         display: flex;
         color: hsl(5, 85%, 63%);
     }
-    /* .div-a, .div-b, .div-c {
-    width: 100%;
-    height: auto;
-  } */
+    #nav-links.hidden {
+        display: none;
+    }
+    
+    .div-e {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px 0;
+  }
+
+  .div-f {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px 0;
+  }
+
+  .div-g {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px 0;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -210,6 +242,10 @@ img {
     color: var(--soft-red);
 }
 
+.card-img {
+    width: 14rem;
+    height: 16rem;
+}
 
 a:hover {
   color: hsl(5, 85%, 63%);
@@ -230,6 +266,7 @@ a:hover {
     grid-row: 1 / span 2; /* Span two rows */
     background-color: black;
     color: white;
+    padding: 32px;
   }
 
   .div-c {
@@ -240,6 +277,8 @@ a:hover {
   .div-d {
     grid-column: 2; /* Second column */
     grid-row: 2; /* Second row */
+    padding: 10px;
+    position: relative;
   }
 
   .div-e {
@@ -248,6 +287,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    padding: 20px 0;
   }
 
   .div-f {
@@ -256,6 +296,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    padding: 20px 0;
   }
 
   .div-g {
@@ -264,6 +305,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    padding: 20px 0;
   }
 
   .large-img {
@@ -306,7 +348,7 @@ a:hover {
                 </div>
             </div>
             <div class="div-b">
-                <div class="div-c">
+                <div class="">
                     <h2>New</h2>
                     <div class="news-item">
                         <h3>Hydrogen VS Electric Cars</h3>
@@ -324,7 +366,7 @@ a:hover {
             </div>
             <div class="div-c">
                 <div class="feature-header">
-                    <h2>The Bright Future of Web 3.0?</h2>
+                    The Bright Future of<br>Web 3.0?
                 </div>
             </div>
             <div class="div-d">
@@ -334,7 +376,7 @@ a:hover {
                         </div>
             </div>
             <div class="div-e">
-                <img src="./assets/images/image-retro-pcs.jpg" alt="retro pcs image">
+                <img class="card-img" src="./assets/images/image-retro-pcs.jpg" alt="retro pcs image">
                 <div>
                     <h1>01</h1>
                     <h2>Reviving Retro PCs</h2>
@@ -342,7 +384,7 @@ a:hover {
                 </div>
             </div>
             <div class="div-f">
-                <img src="./assets/images/image-top-laptops.jpg" alt="top laptops image">
+                <img class="card-img" src="./assets/images/image-top-laptops.jpg" alt="top laptops image">
                 <div>
                     <h1>02</h1>
                     <h2>Top 10 Laptops of 2022</h2>
@@ -350,7 +392,7 @@ a:hover {
                 </div>
             </div>
             <div class="div-g">
-                <img src="./assets/images/image-gaming-growth.jpg" alt="gaming growth image">
+                <img class="card-img" src="./assets/images/image-gaming-growth.jpg" alt="gaming growth image">
                 <div>
                     <h1>03</h1>
                     <h2>The Growth of Gaming</h2>
